# holium-rs-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yaml
crates/backend/: Cargo.toml
crates/backend/src/: ast.rs  codegen.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: build.rs  errors.rs  main.rs
crates/cli/src/info/: mod.rs
crates/cli/src/utils/: errors.rs  mod.rs  sections.rs
crates/cli/tests/: build.rs
crates/macro/: Cargo.toml
crates/macro-support/: Cargo.toml
crates/macro-support/src/: lib.rs  parser.rs
crates/macro/src/: lib.rs
crates/macro/tests/: proc-macro.rs
crates/macro/tests/proc-macro-tests/: README.md  export.rs  export.stderr  update-all-references.sh  update-references.sh
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: lib.rs
crates/sdk/src/internal/: api.rs  data_tree.rs  host_interface.rs  key_tree.rs  memory.rs  mod.rs  version_embedder.rs
sdk/: Cargo.toml
sdk/tests/: Cargo.toml
sdk/tests/artifacts/: rust_integration_test.wasm
sdk/tests/src/: lib.rs
src/: lib.rs
src/data/: mod.rs
src/interface/: api.rs  mod.rs
src/internal/: api.rs  data_tree.rs  host_interface.rs  key_tree.rs  mod.rs
tests/: Cargo.toml
tests/assets/rust-package/: Cargo.toml
tests/assets/rust-package/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
