[package]
name = "holium-macro-backend"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[features]
extra-traits = ["syn/extra-traits"]
spans = []

[dependencies]
cfg-if = "^1.0.0"
lazy_static = "^1.0.2"
log = "^0.4"
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^1.0", features = ["full"] }
