[package]
name = "holium-backend"
version = "1.0.0"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT"
description = "Backend crate for the Holium Rust SDK procedural macro."
documentation = "https://docs.holium.org"
homepage = "https://holium.org"
repository = "https://github.com/polyphene/holium-rs-sdk"
keywords = ["holium"]

[features]
extra-traits = ["syn/extra-traits"]
spans = []

[dependencies]
cfg-if = "^1.0.0"
lazy_static = "^1.0.2"
log = "^0.4"
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^1.0", features = ["full"] }
