[package]
name = "holium-sdk-cli"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.42"
clap = "^2.33"
console = "^0.14.1"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.68"
thiserror= "^1.0.26"

[dev-dependencies]
assert_cmd = "^1.0.7"
assert_fs = "^1.0.3"
predicates = "^2.0.0"
walkdir = "^2.3.2"  