[package]
name = "holium-macro"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "^1.0.42"
holium-rust-sdk = { path="../.." }

[dependencies]
holium-macro-support={ path="../macro-support" }
quote = "^1.0.9"
