[package]
name = "holium-rs-sdk"
version = "1.0.0-alpha.3"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT"
description = "Holium Rust SDK."
documentation = "https://docs.holium.org"
homepage = "https://holium.org"
repository = "https://github.com/polyphene/holium-rs-sdk"
keywords = ["holium"]

[dependencies]
anyhow = "^1.0.42"
holium-macro = { path = "../macro", version = "1.0.0-alpha.3" }
serde = { version = "^1.0.125", features = ["derive"] }
serde_cbor = "^0.11.1"
thiserror = "^1.0.25"